[tool.poetry]
name = "titan"
version = "0.1.1"
description = "Authentiction + Authorization app"
authors = ["Sushant Kumar <sushant.mithila@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.7.3"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
typer = "^0.3.2"
email-validator = "^1.1.2"
httpx = "^0.17.0"
databases = {extras = ["postgresql"], version = "^0.4.1"}
redis = "^3.5.3"
hiredis = "^2.0.0"
fastapi = "^0.65.2"
orjson = "^3.5.4"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
itsdangerous = "^2.0.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"
devtools = {extras = ["pygments"], version = "^0.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pyright]
reportGeneralTypeIssues = "none"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
